<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvHod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hod_vote"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/tvHodDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hod_desc"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_below="@+id/tvHod"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvAsp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assistant_professors_votes"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/tvAspDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asp_desc"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_below="@+id/tvAsp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvStud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/students_vote"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/tvStudDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stud_desc"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_below="@+id/tvStud"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>