<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/cast_your_vote"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/register_number"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvReg"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:autofillHints="HI"
                    android:inputType="number"
                    android:maxLength="12"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvFranchise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/franchise"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/imgMarvel"
                    android:layout_width="161dp"
                    android:layout_height="103dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/marvel"
                    android:maxHeight="100dp"
                    android:src="@drawable/marvel" />

                <ImageView
                    android:id="@+id/imgDc"
                    android:layout_width="161dp"
                    android:layout_height="103dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="51dp"
                    android:layout_marginEnd="7dp"
                    android:contentDescription="@string/dc"
                    android:maxHeight="100dp"
                    android:src="@drawable/dc" />

                <RadioGroup
                    android:id="@+id/rgFranchise"
                    android:layout_width="332dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="154dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMarvel"
                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:text="@string/marvel" />

                    <RadioButton
                        android:id="@+id/rbDC"
                        android:layout_width="152dp"
                        android:layout_height="51dp"
                        android:text="@string/dc_comics" />

                </RadioGroup>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote" />
    </LinearLayout>

</LinearLayout>
